--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -33,6 +33,12 @@ label {
     font-size: 17px;
 }
 
+button.btn.right.col.m3 {
+    position: relative;
+    bottom: 10px;
+    left: 15px;
+}
+
 /* Import fonts */
 @import url(http://fonts.googleapis.com/css?family=Ruda:400,700,900);
 
